# vein-framework

./: .gitignore  CMakeLists.txt  README.md  VeinFrameworkConfig.cmake.in
client-libs/vf-cpp-client/lib/: CMakeLists.txt  cppentitycomponentmap.h  cppeventsystem.h
client-libs/vf-qml/lib/: CMakeLists.txt  entitycomponentmap.cpp  entitycomponentmap.h  entitydictionary.cpp  entitydictionary.h  veinqml.cpp  veinqml.h  veinqmlwrapper.cpp
client-libs/vf-simple-peer/lib/: CMakeLists.txt  vfsentityinsubscription.cpp  vfsentityinsubscription.h  vfsentitysubscribed.cpp  vfsentitysubscribed.h  vfsimplechangenotifier.cpp  vfsimplechangenotifier.h  vfsimpleentitysubscriber.cpp  vfsimpleentitysubscriber.h  vfsimplegetter.cpp  vfsimplegetter.h  vfsimplepeer.h  vfsimplesetter.cpp  vfsimplesetter.h
convenient-code/lib/: CMakeLists.txt  container_safe_delete_while_loop.h  containersafedeletewhileloop.h  vf_core_stack_client.cpp  vf_core_stack_client.h  vfatomicclientcomponentsetter.cpp  vfatomicclientcomponentsetter.h  vfatomiccliententitysubscriber.cpp  vfatomiccliententitysubscriber.h  vfcmdeventitem.cpp  vfcmdeventitem.h  vfcmdeventitemcomponent.cpp  vfcmdeventitemcomponent.h  vfcmdeventitementity.h  vfcommandeventhandler.cpp  vfcommandeventhandler.h  vfcommandeventhandlercomponentitem.cpp  vfcommandeventhandlercomponentitem.h  vfcommandeventhandleritem.cpp  vfcommandeventhandleritem.h  vfcommandeventhandlersystem.cpp  vfcommandeventhandlersystem.h  vfcomponentchangenotifier.cpp  vfcomponentchangenotifier.h  vfcorestackclient.cpp  vfcorestackclient.h  vfsimplechangenotifier.cpp  vfsimplechangenotifier.h  vfsimpleentitysubscriber.cpp  vfsimpleentitysubscriber.h  vfsimplegetter.h  vfsimplepeer.cpp  vfsimplepeer.h  vfsimplesetter.cpp
convenient-code/lib/command-event-actors/: vf_client_component_fetcher.cpp  vf_client_component_fetcher.h  vf_client_component_setter.cpp  vf_client_component_setter.h  vf_client_entity_subscriber.cpp  vf_client_entity_subscriber.h  vf_client_entity_unsubscriber.cpp  vf_client_entity_unsubscriber.h  vf_client_rpc_invoker.cpp  vf_client_rpc_invoker.h  vf_rpc_invoker.cpp  vf_rpc_invoker.h  vf_rpc_params_parser.cpp  vf_rpc_params_parser.h  vf_server_component_add.cpp  (+15 more)
convenient-code/testlib/: CMakeLists.txt  testclientstack.cpp  testclientstack.h  testserverstack.cpp  testserverstack.h  vf_cmd_event_handler_component_item_test.cpp  vf_cmd_event_handler_component_item_test.h  vf_cmd_event_handler_item_test.cpp  vf_cmd_event_handler_item_test.h  vf_entity_rpc_event_handler.cpp  vf_entity_rpc_event_handler.h  vf_test_client_stack.cpp  vf_test_client_stack.h  vf_test_server_stack.cpp  vf_test_server_stack.h  vfcommandeventhandlercomponentitemtest.cpp  vfcommandeventhandlercomponentitemtest.h  vfcommandeventhandleritemtest.cpp  vfcommandeventhandleritemtest.h  vftestclientstack.cpp  vftestclientstack.h  vftestserverstack.cpp  vftestserverstack.h
framework/testlib/: CMakeLists.txt  testcommandeventspyeventsystem.cpp  testcommandeventspyeventsystem.h  testcommandeventstrings.cpp  testcommandeventstrings.h  testdumpreporter.cpp  testdumpreporter.h  testjsonspyeventsystem.cpp  testjsonspyeventsystem.h  testveinserver.cpp  testveinserver.h  testveinserverwithmocknet.cpp  testveinserverwithmocknet.h  testveinserverwithnet.cpp  testveinserverwithnet.h  vf_core_stack_client.cpp  vf_core_stack_client.h  vs_dumpjson.cpp  vs_dumpjson.h
framework/tests/: CMakeLists.txt  test_client_command_events.cpp  test_client_command_events.h  test_command_events.cpp  test_command_events.h  test_storage.cpp  test_storage.h  test_storage_future_notification.cpp  test_storage_future_notification.h  test_storage_notification.cpp  test_storage_notification.h  test_test_vein_server.cpp  test_test_vein_server.h
framework/vf-crypto-bridge/: CMakeLists.txt
framework/vf-event/: CMakeLists.txt  ve_commandevent.cpp  ve_commandevent.h  ve_eventdata.cpp  ve_eventdata.h  ve_eventhandler.cpp  ve_eventhandler.h  ve_eventsystem.cpp  ve_eventsystem.h  ve_storagesystem.cpp  ve_storagesystem.h  ve_validator.cpp  ve_validator.h  vfcommandeventhandler.cpp  vfcommandeventhandler.h  vfcommandeventhandleritem.h  vfcommandeventhandlersystem.cpp  vfcommandeventhandlersystem.h
framework/vf-helpers/: CMakeLists.txt  vh_handlemanager.h  vh_logging.h  vh_macros.h
framework/vf-storage-hash/: CMakeLists.txt  vs_veinhash.cpp  vs_veinhash.h  vs_veinhashprivate.cpp  vs_veinhashprivate.h
network/zera-protobuf/: CMakeLists.txt
server-libs/vf-cpp/: CMakeLists.txt  vf-cpp-component.cpp  vf-cpp-component.h  vf-cpp-compproxy.h  vf-cpp-entity.cpp  vf-cpp-entity.h  vf-cpp-rpc-multithread-blocked.cpp  vf-cpp-rpc-multithread-blocked.h  vf-cpp-rpc-simplified.cpp  vf-cpp-rpc.cpp  vf-cpp-rpc.h
vf-component/lib/: CMakeLists.txt
vf-event/: CMakeLists.txt  VfEventConfig.cmake.in  ve_commandevent.cpp  ve_commandevent.h  ve_eventhandler.cpp  ve_eventhandler.h  ve_eventsystem.cpp  ve_eventsystem.h  ve_storagesystem.cpp  ve_storagesystem.h  ve_validator.h
vf-helpers/: CMakeLists.txt  VfHelpersConfig.cmake.in
vf-storage-hash/: CMakeLists.txt  VfStorageHashConfig.cmake.in  vs_veinhash.h
vf-test-helpers/vf-component-test/: CMakeLists.txt  VfComponentTestConfig.cmake.in  vfcomponenttestlistener.cpp  vfcomponenttestlistener.h  vftestcomponentchangelistener.cpp  vftestcomponentchangelistener.h  vftestcomponentdata.cpp  vftestcomponentdata.h  vftestcomponentlistener.cpp  vftestcomponentlistener.h  vftestcomponentshouter.cpp  vftestcomponentshouter.h  vftestentity.cpp  vftestentity.h  vftestentitycomponentcreator.cpp  vftestentitycomponentcreator.h  vftesteventhandler.cpp  vftesteventhandler.h  vftesttemplate.cpp  vftesttemplate.h
vf-test-helpers/vf-component-test-listener/: CMakeLists.txt
xsession-change/demolib/: CMakeLists.txt  mocklxdmconfigfilegenerator.cpp  mocklxdmconfigfilegenerator.h  mocklxdmsessionchangeparamgenerator.cpp
xsession-change/lib/: CMakeLists.txt  lxdmconfigfile.cpp  lxdmconfigfileparam.cpp  lxdmsessionchangeparam.cpp
xsession-change/tests/: CMakeLists.txt  test_lxdm_config_file.cpp
(+581 files in other folders)
